# tauri-plugin-downloader

./: Cargo.toml  README.md  build.rs  package.json
guest-js/: bun.lockb  downloader.ts  index.ts  package.json
permissions/: default.toml
permissions/autogenerated/: reference.md
permissions/autogenerated/commands/: unpause.toml
permissions/schemas/: schema.json
src/: err.rs  lib.rs
src/logic/: actions.rs  downloadable.rs  downloader.rs  mod.rs  thread.rs
