[package]
name = "tauri-plugin-downloader"
description = "Tauri plugin for downloading files"
license = "GPL-3.0-only"
version = "0.1.0"
authors = ["smokingplaya"]
edition = "2021"
rust-version = "1.77.2"
exclude = ["/dist-js", "/guest-js", "/node_modules"]
repository = "https://github.com/riverfallmc/tauri-plugin-downloader"
links = "tauri-plugin-downloader"

[dependencies]
tauri = { version = "2", features = ["wry"] }
tokio = "1.43.0"
serde = "1.0"
thiserror = "2"
once_cell = "1.20.2"
reqwest = "0.12.12"
ahash = "0.8.11"
anyhow = "1.0.95"
log = "0.4.25"

[build-dependencies]
tauri-plugin = { version = "2.0.3", features = ["build"] }
